--- a/mystyles.css
+++ b/mystyles.css
@@ -1,7 +1,20 @@
+.input-group {
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.input-group input {
+  margin-left: 20px;
+}
+
 .container {
   display: flex;
-  width: 260px;
   flex-wrap: wrap;
+}
+
+.form input {
+  margin-bottom: 20px;
 }
 
 .item {
@@ -14,5 +27,5 @@
   border-style: solid;
   border-color: black;
   border-width: 0.00005px;
- 
+
 }
